--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Happy Birthday Wishing ILoveYou- Chamaparan Now </title>
+        <title>Happy Birthday Shriyanshi-</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- Google Fonts -->
