--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Happy Birthday Shriyanshi-</title>
+        <title>Happy Birthday Aditi-</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- Google Fonts -->
@@ -19,7 +19,7 @@
         <div class="layer"></div>
         <div class="icing">
             <div class="name">
-                <p>Happy Birthday <br/> <span id="name">Shriyanshi</span></p>
+                <p>Happy Birthday <br/> <span id="name">Aditi</span></p>
             </div>
         </div>
         <div class="candle1">
